Boolean Modifier "Exact" solver does not apply target object material to created faces #86427

Closed
opened 2021-03-09 13:54:58 +01:00 by Bruno · 10 comments

System Information
Operating system: MacOS 10.13.6
Graphics card: NVidia GT 750M and Intel Iris Pro 1536 MB

system-info.txt

Blender Version
Broken: 2.93.0 alpha (blender-2.93.0-8618c4159c7b-macOS)
Worked: 2.92.0 stable

Short description of error

when using Difference or intersection, a boolean modifier operation creates new faces from the intersecting geometry. Those faces should get assigned the same material as the target boolean object chosen in the modifier. This is not happening when the Solver is "Exact".

boolean material.gif

Exact steps for others to reproduce the error

boolean material.blend

  1. set the view port to "Material Preview" mode to be able to see the colors
  2. create a cube and sphere objects with the sphere intersecting the cube
  3. create a new basic diffuse material for the cube and one for the sphere with a different diffuse color
  4. add the sphere material to the cube as second slot
  5. add a Boolean modifier using the Difference or Intersection method to the cube and select the sphere as target Object
**System Information** Operating system: MacOS 10.13.6 Graphics card: NVidia GT 750M and Intel Iris Pro 1536 MB [system-info.txt](https://archive.blender.org/developer/F9881084/system-info.txt) **Blender Version** Broken: 2.93.0 alpha (blender-2.93.0-8618c4159c7b-macOS) Worked: 2.92.0 stable **Short description of error** when using Difference or intersection, a boolean modifier operation creates new faces from the intersecting geometry. Those faces should get assigned the same material as the target boolean object chosen in the modifier. This is not happening when the Solver is "Exact". ![boolean material.gif](https://archive.blender.org/developer/F9881078/boolean_material.gif) **Exact steps for others to reproduce the error** [boolean material.blend](https://archive.blender.org/developer/F9881075/boolean_material.blend) 1) set the view port to "Material Preview" mode to be able to see the colors 2) create a cube and sphere objects with the sphere intersecting the cube 3) create a new basic diffuse material for the cube and one for the sphere with a different diffuse color 4) add the sphere material to the cube as second slot 5) add a Boolean modifier using the Difference or Intersection method to the cube and select the sphere as target Object
Author

Added subscriber: @BlenderBruno

Added subscriber: @BlenderBruno
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce this on the latest 2.93.0 Alpha, branch: master, commit date: 2021-03-10 04:47, hash: 70e73974b5.

I can reproduce this on the latest 2.93.0 Alpha, branch: master, commit date: 2021-03-10 04:47, hash: `70e73974b5`.
Member

Added subscriber: @howardt

Added subscriber: @howardt
Member

@howardt This is probably something for you :)

@howardt This is probably something for you :)
Howard Trickey self-assigned this 2021-03-11 04:28:35 +01:00
Member

I was trying to reproduce the behavior of Fast, but it seems I misunderstood that behavior. Some experiments seemed to show that Fast just used the same slot # in the final result that was used for the material of the faces on the source (cutter) object, so that's what I did (if you add two more slots of materials to the icosphere and put the magenta material in the 3rd slot, which corresponds to where that material is in the cube, then it works). Also, if the target doesn't already have the source material somewhere in one of its slots, Fast doesn't copy the material over to the target. This seems kind of broken too, but I guess should, for now, just try to emulate exactly what the Fast mode does, which seems to be: look up the source material in the targets material slots: if found, use that slot #; if not found, just use the same slot #.

I was trying to reproduce the behavior of Fast, but it seems I misunderstood that behavior. Some experiments seemed to show that Fast just used the same slot # in the final result that was used for the material of the faces on the source (cutter) object, so that's what I did (if you add two more slots of materials to the icosphere and put the magenta material in the 3rd slot, which corresponds to where that material is in the cube, then it works). Also, if the target doesn't already have the source material somewhere in one of its slots, Fast doesn't copy the material over to the target. This seems kind of broken too, but I guess should, for now, just try to emulate exactly what the Fast mode does, which seems to be: look up the source material in the targets material slots: if found, use that slot #; if not found, just use the same slot #.

This issue was referenced by a01fb22f28

This issue was referenced by a01fb22f28df21acab103a5216591355b1dc85d7
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Thanks Howard and Team!

Thanks Howard and Team!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86427
No description provided.